
[package]
name = "test-env-helpers"
version = "0.2.1"
authors = ["Tom Pridham <pridham.tom@gmail.com>"]
edition = "2021"
description = "Jest style setup and teardown test helper macros"
documentation = "https://docs.rs/test-env-helpers/latest/test_env_helpers/"
readme = "README.md"
homepage = "https://docs.rs/test-env-helpers/latest/test_env_helpers/"
repository = "https://github.com/TomPridham/test-env-helpers"
license = "MIT"
keywords = ["afterEach", "beforeEach", "setup", "teardown", "test"]
exclude = ["tests/*"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.15"
syn = { version = "1.0.86", features = ["full", "fold", "extra-traits"] }

[dev-dependencies]
lazy_static = "1.4.0"
test-case = "2.0.0"
tokio = { version = "1.17.0", features = ["macros", "test-util"] }
